--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,9 +1,29 @@
 @CHARSET "UTF-8";
 
+/*------------------------------
+// 初期化
+//------------------------------ */
+
 html, body {
 	height: 100%;
 	margin: 0;
 }
+body {
+  background-color: #e0e0e0;
+}
+p,a,ul,li,tr,th {
+  text-decoration: none;
+  color: #2090e0;
+  margin: 0;
+  padding: 0;
+}
+.clear {
+	clear: both;
+}
+
+/*------------------------------
+// header
+//------------------------------ */
 
 .header {
 	background-color: #614D9D;	
@@ -19,21 +39,27 @@ html, body {
 	color: #eee;
 	text-align: center;
 }
+
+/*------------------------------
+// main
+//------------------------------ */
+
 .wrapper {
 	width: 100%;
 }
 .main {
-	padding-bottom: 30px;
-	width: 604px;
+	width: 100%;
 	height: auto;
-	height: 90%;
-	margin: 40px auto;
+	height: 100%;
+	margin: 60px auto 20px auto;
+	background-color: #eeeeee;
 }
 .main .leftnav {
 	float: left;
 	border: 1px solid #a0a0a0;
 	width: 150px;
-	height: 80%;
+	height: 100%;
+	margin: 0 auto;
 }
 .main .leftnav li {
 	list-style: none;
@@ -42,23 +68,24 @@ html, body {
 	float: left;
 	border: 1px solid #a0a0a0;
 	width: 450px;
-	height: 80%;
-
+	height: 100%;
+	margin: 0 auto;
 }
+
+/*------------------------------
+// footer 
+//------------------------------ */
+
 .footer {
 	background-color: #614D9D;
 	border: 1px solid #a0a0a0;
 	width: 100%;
-	height: 50px;
+	height: 100px;
 	bottom: 0;
 }
-.footer .rights {
+.footer .rights p{
 	text-align: center;
 	color: #fff;
 	font-size: 5px;
-}
-
-.clear {
-	clear: both;
 }
 
