--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -6,6 +6,7 @@
 
 html, body {
 	height: 100%;
+	width: 100%;
 	margin: 0;
 }
 body {
@@ -27,7 +28,7 @@ p,a,ul,li,tr,th,button {
 
 .header {
 	background-color: #614D9D;	
-	border: 1px solid ;
+	/* border: 1px solid ; */
 	width: 100%;
 	height: 40px;
 	position: absolute;
@@ -54,15 +55,16 @@ p,a,ul,li,tr,th,button {
 
 .wrapper {
 	width: 100%;
+	height: 100%;
 	padding: 60px 0;
 }
 .main {
-	width: 800px;
+	width: 740px;
 	height: auto;
 	height: 100%;
 	margin: auto;
 	background-color: #fff;
-	padding: 40px;
+	padding: 20px;
 }
 .main .leftnav {
 	background-color: #fff;
@@ -70,9 +72,9 @@ p,a,ul,li,tr,th,button {
 	/* border: 1px solid #a0a0a0; */
 	width: 150px;
 	height: 450px;
-	margin: 10px 40px 0 40px;
+	margin: 10px 20px 0 40xp;
 	margin-top: 10px;
-	margin-right: 40px;
+	margin-right: 20px;
 	background-color: #fffff0;
 }
 .main .leftnav li {
